# cclipboardDesktopClient

./: README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.vue  struct.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_errors.rs  main.rs  test.rs  utils.rs
src-tauri/src/clipboard/: clipboard.rs
src-tauri/src/handler/: handler.rs
src-tauri/src/message/: message.rs
src/components/: CustomAlert.vue  DeviceInfoContainer.vue
