[package]
name = "cclipboardclient"
version = "0.0.0"
description = "cclipboard"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["process-exit", "system-tray", "clipboard-all", "window-set-always-on-top", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard-master = "3.1.3"
arboard = "3.3.0"
tokio = { version = "1.36.0", features = ["full"] }
bytes = "1.5.0"
anyhow = "1.0.75"
thiserror = "1.0.48"
whoami = "1.4.1"
rand = "0.8.5"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
#log4rs = { version = "1.3.0",features = ["file_appender", "pattern_encoder", "threshold_filter"] }
#log = "0.4.20"
#time = "0.3.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
